--- a/Colab/00-Lesson-Hello_World.ipynb
+++ b/Colab/00-Lesson-Hello_World.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "<a \n",
-    " href=\"https://github.com/Code-Parth/Learn-Python-Course/blob/master/Colab/00-Lesson-Hello_World.ipynb\"\n",
+    " href=\"https://colab.research.google.com/github/Code-Parth/Learn-Python-Course/blob/master/Colab/00-Lesson-Hello_World.ipynb\"\n",
     " target=\"_parent\">\n",
     "<img \n",
     " src=\"https://colab.research.google.com/assets/colab-badge.svg\"\n",
